fix: 🐛 修复message组件z-index,调整发版命令

--- a/components/message/style.less
+++ b/components/message/style.less
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0px;
     left: 50%;
+    z-index: 1000;
     cursor: pointer;
     text-align: center;
     font-size: 13px;
